--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "flowbite": "^2.3.0",
+        "flowbite-react": "^0.7.3",
+        "geist": "^1.2.2"
     }
 }
