--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
         "@radix-ui/react-radio-group": "^1.1.3",
         "@radix-ui/react-scroll-area": "^1.0.5",
         "@radix-ui/react-slot": "^1.0.2",
+        "@reduxjs/toolkit": "^2.2.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "geist": "^1.2.2",
         "lucide-react": "^0.359.0",
         "react-hook-form": "^7.51.1",
+        "react-redux": "^9.1.0",
         "tailwind-merge": "^2.2.2",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4"
