--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "lucide-react": "^0.359.0",
         "react-hook-form": "^7.51.1",
         "react-redux": "^9.1.0",
+        "react-to-pdf": "^1.0.1",
         "tailwind-merge": "^2.2.2",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4"
