--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
         "clsx": "^2.1.0",
         "geist": "^1.2.2",
         "lucide-react": "^0.359.0",
+        "next-themes": "^0.3.0",
         "react-hook-form": "^7.51.1",
         "react-redux": "^9.1.0",
         "react-to-pdf": "^1.0.1",
+        "sonner": "^1.4.41",
         "tailwind-merge": "^2.2.2",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4"
